--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ p#location {
     align-items: center;
     /* Zentrierte Inhalte */
     transition: transform 0.2s, background-color 0.2s;
+    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
 }
 
 .day:hover {
@@ -72,6 +73,7 @@ p#location {
     text-align: center;
     margin-bottom: 10px;
     color: #e0e0e0;
+    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
 }
 
 .time-group {
@@ -91,6 +93,7 @@ p#location {
     gap: 10px;
     /* Abstand zwischen Label und Zeit */
     color: #d0d0d0;
+    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
 }
 
 .time-info strong {
