--- a/style.css
+++ b/style.css
@@ -69,35 +69,33 @@ p#location {
     /* Größere Schriftgröße für das Datum */
     font-weight: bold;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: #e0e0e0;
     pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
 }
 
 .time-group {
-    display: flex;
-    flex-direction: column; /* Inhalte übereinander anordnen */
-    align-items: flex-start; /* Inhalte innerhalb des Containers linksbündig ausrichten */
     margin: 0 auto; /* Container zentrieren */
-    text-align: left; /* Text innerhalb des Containers linksbündig */
+    font-size: 1.1em;
+    display: grid;
+    grid-template-columns: auto auto; /* Zwei Spalten: Labels und Zeiten */
+    gap: 10px 20px; /* Abstand zwischen Zeilen und Spalten */
+    justify-content: start; /* Alles linksbündig */
+    align-items: center; /* Vertikale Ausrichtung */
   }
 
-.time-info {
-    font-size: 1.1em;
-    margin: 5px 0;
-    display: flex;
-    justify-content: center;
-    /* Zentrierte Inhalte */
-    gap: 10px;
-    /* Abstand zwischen Label und Zeit */
+  .time-label {
+    text-align: left; /* Labels linksbündig */
+    font-weight: bold;
+    color: #ebb15c;
+    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
+  }
+
+  .time-value {
+    text-align: left; /* Zeiten linksbündig */
     color: #d0d0d0;
     pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
-}
-
-.time-info strong {
-    color: #ebb15c;
-    /* Helle Farbe für Labels */
-}
+  }
 
 /* Für kleine Bildschirme */
 @media (min-width: 680px) {
@@ -131,7 +129,7 @@ p#location {
 
     min-width: 70%;
     font-size: 1.2em;
-    margin-top: 15px;
+    margin-top: 20px;
     padding: 10px;
     background-color: #ffd9b3; /* Pastell-Orange */
     color: #b35900; /* Dunkles Orange für den Text */
@@ -142,7 +140,7 @@ p#location {
 
 .success {
     min-width: 70%;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: #d4edda;
     color: #155724;
     font-size: 1.2em;
