--- a/style.css
+++ b/style.css
@@ -1,223 +1,175 @@
 body {
+    background-color: #1e1e1e;
+    color: #e0e0e0;
     font-family: Arial, sans-serif;
-    text-align: center;
     margin: 0;
     padding: 0;
-    background-color: #1e1e1e;
-    /* Dunkler Hintergrund für den Kalender */
-    color: #e0e0e0;
-    /* Textfarbe im Dark Mode */
+    pointer-events: none;
+    text-align: center;
 }
 
 h1 {
-    margin: 20px 0 10px 0;
-    font-size: 2em;
     color: #ffffff;
-    /* Überschrift in Weiß */
+    font-size: 2em;
+    margin: 20px 0 10px 0;
 }
 
 p#location {
-    margin: 0 0 10px 0;
-
-    font-size: 1.2em;
     color: #d0d0d0;
-    /* Leicht abgedunkelt */
-}
-
-#calendar {
-    display: grid;
-    gap: 10px;
-    box-sizing: border-box;
-    padding: 20px;
-    margin: auto;
-    grid-template-columns: 1fr;
-    max-width: 1280px;
-    /* Begrenzung der Breite */
-    background: #1e1e1e;
-    /* Dunkler Hintergrund für den Kalender */
-    border-radius: 10px;
-
-    /* Schatten für den Dark Mode */
-    overflow: hidden;
-}
-
-.day {
-    padding: 20px;
-    border: 1px solid #333;
-    /* Dunkler Rahmen */
-    border-radius: 8px;
-    background-color: #2c2c2c;
-    /* Kartenhintergrund im Dark Mode */
-    display: flex;
     font-size: 1.2em;
-    flex-direction: column;
-    align-items: center;
-    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
-}
-
-.day:hover {
-    transform: scale(1.02);
-    background-color: #383838;
-    /* Hellerer Hintergrund bei Hover */
-}
-
-.highlight {
-    /* border: 3px solid #ff9800; */
-        border: 3px solid #e7a33d;
+    margin: 0 0 10px 0;
 }
 
 .date {
-    font-size: 1.3em;
-    /* Größere Schriftgröße für das Datum */
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
     color: #ffffff;
-    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
+    font-size: 1.3em;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.day {
+    align-items: center;
+    background-color: #2c2c2c;
+    border: 1px solid #333;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2em;
+    padding: 20px;
+}
+
+.day:hover {
+    background-color: #383838;
+    transform: scale(1.02);
+}
+
+.highlight {
+    border: 3px solid #e7a33d;
+}
+
+.success {
+    background-color: #d4edda;
+    border-radius: 5px;
+    color: #155724;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 20px;
+    min-width: 70%;
+    padding: 10px;
+    text-align: center;
 }
 
 .time-group {
-    margin: 0 auto; /* Container zentrieren */
-    font-size: 1em;
+    align-items: center;
     display: grid;
-    grid-template-columns: auto auto; /* Zwei Spalten: Labels und Zeiten */
-    gap: 10px 20px; /* Abstand zwischen Zeilen und Spalten */
-    justify-content: start; /* Alles linksbündig */
-    align-items: center; /* Vertikale Ausrichtung */
-  }
+    font-size: 1em;
+    gap: 10px 20px;
+    grid-template-columns: auto auto;
+    justify-content: start;
+    margin: 0 auto;
+}
 
-  .time-label {
-    text-align: left; /* Labels linksbündig */
-    font-weight: bold;
+.time-label {
     color: #ebb15c;
-    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
-  }
+    font-weight: bold;
+    text-align: left;
+}
 
-  .time-value {
-    text-align: left; /* Zeiten linksbündig */
+.time-value {
     color: #d0d0d0;
-    pointer-events: none; /* Verhindert jegliche Klickinteraktionen */
-  }
+    text-align: left;
+}
 
-/* Für kleine Bildschirme */
+.timer {
+    background-color: #c0dce4;
+    border-radius: 5px;
+    color: #4a6b79;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 20px;
+    min-width: 70%;
+    padding: 10px;
+    text-align: center;
+}
+
+#calendar {
+    background: #1e1e1e;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr;
+    margin: auto;
+    max-width: 1280px;
+    overflow: hidden;
+    padding: 20px;
+}
+
 @media (min-width: 680px) {
-
     #calendar {
         grid-template-columns: repeat(2, 1fr);
         padding: 10px;
     }
-
 }
 
-/* Für größere Bildschirme */
 @media (min-width: 980px) {
-
-    #calendar {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
     body {
         background-color: #252525;
     }
-
+    #calendar {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-.timer {
-
-    min-width: 70%;
-    font-size: 1em;
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #c0dce4; /* Pastell-Orange */
-    color: #4a6b79; /* Dunkles Orange für den Text */
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.success {
-    min-width: 70%;
-    margin-top: 20px;
-    background-color: #d4edda;
-    color: #155724;
-    font-size: 1em;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
+@media print {
+    body {
+        background-color: white;
+    }
+    #calendar {
+        background: white;
+    }
+    h1 {
+        color: #000;
+        margin-bottom: 20px;
+        margin-top: 0px;
+    }
+    p#location {
+        display: none;
+    }
+    .day {
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+        background-color: white;
+        border-radius: 10px;
+        page-break-inside: avoid;
+    }
+    .day:nth-child(even) {
+        border: 1px solid #c2d4f0;
+    }
+    .day:nth-child(odd) {
+        border: 1px solid #fac6da;
+    }
+    .date {
+        color: #000;
+    }
+    .success,
+    .timer {
+        display: none;
+    }
+    .time-value {
+        color: #333;
+    }
 }
 
 @media print and (orientation: portrait) {
     #calendar {
         grid-template-columns: repeat(2, 1fr);
     }
-  }
+}
 
-  /* Stile für Querformat */
 @media print and (orientation: landscape) {
     #calendar {
         grid-template-columns: repeat(3, 1fr);
     }
-  }
-  @media print {
-    body {
-        background-color: white;
-    }
-
-    #calendar {
-        background: white;
-    }
-
-    h1 {
-        margin-top: 0px;
-        margin-bottom: 20px;
-        color: #000; /* Schwarz für Überschriften */
-    }
-    .highlight{
-        border: 1px solid #333;
-    }
-    /* Erfolgs- und Timer-Anzeige ausblenden */
-    .success,
-    .timer {
-        display: none;
-    }
-    .day {
-        -webkit-print-color-adjust: exact;
-        border-radius: 10px; /* Abgerundete Ecken */
-        /* background-color: #f8eaf0 !important; */
-      page-break-inside: avoid; /* Verhindert, dass Tage abgeschnitten werden */
-      background-color: white;
-    }
-
-        /* Alternierende Hintergrundfarbe für jeden zweiten Tag */
-        .day:nth-child(even) {
-            /* background-color: #eaf4fc !important; */
-            border: 1px solid #c2d4f0; /* Passender Blauton für den Rahmen */
-        }
-    
-        .day:nth-child(even) .time-label {
-            color: #65799b; /* Dunklerer Rosaton für Labels */
-        }
-
-                /* Alternierende Hintergrundfarbe für jeden zweiten Tag */
-                .day:nth-child(odd) {
-                    /* background-color: #eaf4fc !important; */
-                    border: 1px solid #fac6da; /* Dunklerer Rosaton für den Rahmen */
-                }
-            
-                .day:nth-child(odd) .time-label {
-                    color: #be6d8e; /* Dunklerer Rosaton für Labels */
-                }
-    .date {
-        color: #000; /* Schwarz für das Datum */
-    }
-
-    .time-value {
-        color: #333; /* Dunkelgrau für Zeiten */
-    }
-
-    #location {
-      display: none; /* Verbirgt den Standort in der Druckansicht */
-    }
-
-  }
+}
